Manually wrap the Bugsauce player with a fitvids container

--- a/vimeography-bugsauce/assets/css/bugsauce.css
+++ b/vimeography-bugsauce/assets/css/bugsauce.css
@@ -1,3 +1,17 @@
+  .video-wrapper {
+    position: relative;
+    height: 0;
+    padding-bottom: 56.25%; /* 16:9 Aspect Ratio */
+  }
+
+  .video-wrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+
 /* Browser Resets */
 .vimeography-bugsauce-container a:active,
 .vimeography-thumbnails a:active,
